infrastructure/deploiement-kube/environments/staging/patch-resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 2
  template:
    spec:
      containers:
      - name: backend
        resources:
          requests:
            cpu: 150m
            memory: 192Mi
          limits:
            cpu: 400m
            memory: 512Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
spec:
  replicas: 2
  template:
    spec:
      containers:
      - name: front
        resources:
          requests:
            cpu: 150m
            memory: 192Mi
          limits:
            cpu: 400m
            memory: 512Mi
